<resources>
    <string name="app_name">pepper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="cnfailed">Connect Server Failed</string>
    <string name="cnwrong">Connect Server Wrong</string>
    <string name="nodata">No Data</string>
    <string name="warning_username">Please Enter Your Email</string>
    <string name="warning_password">Please Enter Your Password</string>

    <string name="pop_confirmtitle">Confirm</string>
    <string name="pop_no">No</string>
    <string name="pop_yes">Yes</string>
    <string name="pop_registitle">Confirmation</string>
    <string name="pop_regismsg">Thank you for registering/recording attendance for this training!</string>
    <string name="pop_outlook">Add event to Outlook Calendar</string>
    <string name="pop_google">Add event to Google Calendar</string>
    <string name="pop_trainingid">Traning ID</string>
    <string name="pop_deltrain">Are you sure you want to delete the training?</string>
    <string name="pop_delsuccess">Delete Successfully!</string>


    <string name="login_usernamehint">example: username@domain.com</string>
    <string name="login_passwordhint">password</string>
    <string name="login_logintext">Login</string>
    <string name="login_fptext">Forgot Password?</string>
    <string name="login_join">Join Pepper</string>
    <string name="login_remember">Remember Me</string>

    <string name="logout_namelabel">Name:</string>
    <string name="logout_namehint">username</string>
    <string name="logout_btn">Log Out</string>

    <string name="main_title">Pepper PD Planner</string>
    <string name="main_search">Search</string>
    <string name="main_location">Location</string>
    <string name="main_register">Register</string>
    <string name="main_registered">Registered</string>
    <string name="main_unregistered">Unregistered</string>
    <string name="main_unregister">Unregister</string>

    <string name="search_title">Search</string>
    <string name="search_state">Select State</string>
    <string name="search_district">Select District</string>
    <string name="search_subject">Select subject</string>
    <string name="search_peppercourses">Select Pepper Courses</string>
    <string name="search_date">Select Date</string>
    <string name="search_stime">Select Start Time</string>
    <string name="search_etime">Select End Time</string>
    <string name="search_field">Select Field</string>
    <string name="search_selsubject">Select Subject</string>
    <string name="search_school">Select School</string>
    <string name="search_email">Input Email</string>
    <string name="search_username">Input Username</string>
    <string name="search_fname">Input First Name</string>
    <string name="search_lname">Input Last Name</string>
    <string name="search_cohort">Select Cohort</string>
    <string name="stimelittlethanetime">Start Time Can Not Later Than End Time</string>
    <string name="stimebigthanetime">End Time Can Not Earlier Than Start Time</string>

    <string name="today">Today</string>
    <string name="reset">Reset</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="clear">clear</string>
    <string name="edit">Edit</string>
    <string name="Students">Students</string>
    <string name="StudentInformation">Student Information</string>
    <string name="CheckFailure">Check Failed</string>
    <string name="CheckSuccess">Attended Success!</string>
    <string name="deltraining">Thack you! You`re no longer registered for this training.</string>

    <string name="calendar_week">Calendar Week</string>
    <string name="calendar_month">Calendar Month</string>
    <string name="calendar_day">Calendar Day</string>
    <string name="Close">Close</string>
    <string name="Check">Check</string>
    <string name="Attended">Attended</string>
    <string name="AddToWaitList">Add waitList</string>
    <string name="RemoveWaitList">Remove waitList</string>
    <string name="Cancel">Cancel</string>
    <string name="State">State</string>
    <string name="District">District</string>
    <string name="Subject">Subject</string>
    <string name="Course">Course</string>
    <string name="Description">Description</string>
    <string name="TrainingDate">Training Date</string>
    <string name="TrainingStartTime">Training Start Time</string>
    <string name="TrainingEndTime">Training End Time</string>
    <string name="TrainingLocation">Training Location</string>
    <string name="Hours">Hours</string>
    <string name="Instructors">Instructors</string>
    <string name="Creator">Creator</string>
    <string name="RegisterRecordAttendance">Register/Record Attendance</string>
    <string name="Status">Status</string>
    <string name="Attendance">Attendance</string>
    <string name="Validation">Validation</string>
    <string name="Credits">Credits</string>
    <string name="School">School</string>
    <string name="TrainingName">Training Name</string>
    <string name="PepperCourse">Pepper Course</string>
    <string name="SubjectArea">Subject Area</string>
    <string name="Add">Add</string>
    <string name="addnew">Add New</string>
    <string name="mycalendar">My Calendar</string>
    <string name="download_success">download success</string>
    <string name="file_does_not_exist">file does not exist</string>
    <string name="back_abnormal_results">back abnormal results</string>
    <string name="loading">loading&#8290;</string>
    <string name="selectall">Select All</string>
    <string name="unregisterselected">Unregister Selected</string>
    <string name="registerselected">Register Selected</string>
    <string name="email">Email</string>
    <string name="cohort">Cohort</string>
    <string name="school">School</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="savesuccess">Save Successfully!</string>
    <string name="inputtn">Input Training Name</string>
    <string name="iptmrc">Input Maximum Registration Cap</string>
    <string name="ipttrid">Input Training ID</string>

    <string name="allcate">All Categories</string>
    <string name="attendtraining">Attended Training</string>
    <string name="iamregistered">I am registered</string>
    <string name="icanregister">I can register</string>
    <string name="trainingnotyetoptn">Training not yet open</string>
    <string name="onWaitList">On WaitList</string>
    <string name="nomoresport">No More Sports</string>

    <string name="createpd">Create Your Training or PD Event</string>
    <string name="CALENDARWEEK">CALENDAR MONTH</string>
    <string name="REMINDEREMAIL">REMINDER EMAIL</string>
    <string name="DOWNLOAOEXCEL">DOWNLOAO EXCEL</string>
    <string name="RUS">REGISTER/UNREGISTER STUDENTS</string>


    <string name="allattended">All Attended</string>
    <string name="allvalidated">All Validated</string>


    <string name="step1">Step 1 of 6</string>
    <string name="step1_title">What type of training would you like to create?</string>
    <string name="step1_c1title">Training with a Current Pepper Course</string>
    <string name="step1_c1content">Choosing this option will allow you to create a training using a current Pepper course. Example: Select PEP101 Course for New Teachers, Enrollment Limited to 30</string>
    <string name="step1_c2title">District/School Training or PD Event</string>
    <string name="step1_c2content">Choosing this option will allow you to create a custom trainingor PD event specific for your District/School staff. Example: Schedule a District-sponsored, on-site PD event for ELL Teachers</string>

    <string name="step2">Step 2 of 6</string>
    <string name="step2_title">General Training Information</string>
    <string name="step2_selstate">Select A State</string>
    <string name="step2_seldist">Select A District</string>
    <string name="step2_selschool">Select A School</string>
    <string name="step2_selPepperCourse">Select A Pepper Course</string>
    <string name="step2_selSubjectArea">Select A Subject Area</string>
    <string name="step2_edttrainname">Input A Training Name</string>
    <string name="step2_desc">Input Description</string>

    <string name="step3">Step 3 of 6</string>
    <string name="step3_title">Training or PD Event Schedule</string>
    <string name="step3_seltdate">Please Select the Training Date</string>
    <string name="step3_selstime">Please Select Start Time</string>
    <string name="step3_seletime">Please Select End Time</string>

    <string name="step4">Step 4 of 6</string>
    <string name="step4_title">Training or PD Event Locatione</string>
    <string name="step4_sellocation">Location &#8212; Room # or URL</string>
    <string name="step4_iptlocation">Please Input Location &#8212; Room # or URL</string>
    <string name="step4_seladd">Please Select Training Address</string>

    <string name="step5">Step 5 of 6</string>
    <string name="step5_title">Add/Remove Instructors</string>
    <string name="step5_notetop">Select a training instructor by searching email(start typing and select email of instructor)</string>
    <string name="step5_notebot">You may add more instructors after selecting the first one.</string>
    <string name="step5_edittraining">Edit Training</string>
    <string name="step5_deltraining">Delete Training</string>


    <string name="step6">Step 6 of 6 - Almost There!</string>
    <string name="step6_title">Registration &#38;  Attendance Tracking</string>

    <string name="step61_AllowRegistration">Allow Registration</string>
    <string name="step61_MRC">Maximum Registration Cap</string>
    <string name="step61_AllowWaitlis">Allow Waitlis</string>
    <string name="step61_att">Student can record attendance</string>
    <string name="step61_attrec">Turn-on Instructor Attendance Recording</string>
    <string name="step61_val">Allow Attendance Validation</string>
    <string name="step62_CreditHours">Credit Hours</string>
    <string name="step62_uft">Update from time</string>
    <string name="step62_TrainingID">Training ID</string>

    <!--events option-->
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="selectStateFirst">please select state first</string>
    <string name="selectDistrictFirst">please select district first</string>
</resources>
