<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cmnbg"
    android:orientation="vertical"
    android:padding="@dimen/lt_padding"
    tools:context=".fragment.CTPager1Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lt_padding"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/step1"
            android:textColor="@color/st_fontcolor"
            android:textSize="16sp"/>

        <ImageButton
            android:id="@+id/btn_nextstop"
            android:layout_width="@dimen/pagerbtn_height"
            android:layout_height="@dimen/pagerbtn_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:background="@null"
            android:src="@mipmap/s35"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/lt_padding"
        android:layout_marginEnd="@dimen/lt_padding"
        android:text="@string/step1_title"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/lt_padding"
        android:padding="@dimen/lt_padding"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/btn_cate1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/chk_cate1"
                android:layout_width="@dimen/btn_sm"
                android:layout_height="@dimen/btn_sm"
                android:layout_marginTop="@dimen/lt_padding"
                android:src="@mipmap/s27"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/lt_padding"
                android:paddingEnd="@dimen/lt_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lt_padding"
                    android:text="@string/step1_c1title"
                    android:textColor="@color/ft_content"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lt_padding"
                    android:text="@string/step1_c1content"
                    android:textColor="@color/ft_content"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/lt_padding"
            android:layout_marginBottom="@dimen/lt_padding"
            android:background="@color/gray">

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btn_cate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/chk_cate2"
                android:layout_width="@dimen/btn_sm"
                android:layout_height="@dimen/btn_sm"
                android:layout_marginTop="@dimen/lt_padding"
                android:src="@mipmap/s26"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/lt_padding"
                android:paddingEnd="@dimen/lt_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lt_padding"
                    android:text="@string/step1_c2title"
                    android:textColor="@color/ft_content"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/lt_padding"
                    android:text="@string/step1_c2content"
                    android:textColor="@color/ft_content"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>